end of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=dataingapp.db"
   },
+  "TokenKey": "6f47c3cb-a138-4fde-bb8a-413f9b688ccf",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
